Update Status Text

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -65,7 +65,7 @@
           <div class="folder-header" onclick="toggleFolder(this)">
             <img class="arrow" src="{{ url_for('static', filename='img/arrow.png') }}" />
             <img class="folder-icon" src="{{ url_for('static', filename='img/folder.png') }}" />
-            <div class="folder-name">Gyroscope</div>
+            <div class="folder-name">Accelerometer</div>
           </div>
           <div class="files" id="accelerometer"></div>
         </div>
