Add better error handling and refresh

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -102,8 +102,9 @@
     </div>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="{{ url_for('static', filename='js/data.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/utils.js') }}"></script>
     <script src="{{ url_for('static', filename='js/graph.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/data.js') }}"></script>
     <script src="{{ url_for('static', filename='js/file_explorer.js') }}"></script>
     <script>
       // Need to keep this inline so the jinja template can work
