--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -29,6 +29,7 @@
         <option value="speech">Speech</option>
         <option value="math">Math</option>
         <option value="staircase">Staircase</option>
+        <option value="bike">Bike</option>
       </select>
 
       <div class="vertical-line" style="height: 45px"></div>
